# datatalks-llm-zoomcamp-2026

01-agentic-rag/: README.md  main.py  pyproject.toml  rag_helper.py
02-vector-search/: README.md  main.py
03-orchestration/: homework.md
03-orchestration/flows/: 3_rag_with_websearch.yaml
04-evaluation/: README.md  evaluate.py  evaluation_utils.py  main.py  pyproject.toml
05-monitoring-hw/: README.md  main.py  pyproject.toml  rag_helper.py  starter.py
